# Dashboards

./: .gitignore  charts.py  dark_mode.py  decorators.py  index.ipynb  index.py  insides.py  pyproject.toml
retail/: insides.py
